[package]
name = "professor_sloak"
version = "0.1.0"
authors = ["Strain-113 <hive.rats@gmail.com>"]

[dependencies]
csv = "0.14"
rand = "0.3"
rustc-serialize = "0.3"
# We depend on our own version of slack-rs to get around a deserialization bug.
slack = { git = "https://github.com/hyena/slack-rs", branch = "professor-sloak-support" }
